--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://jakevdp.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Pythonic Perambulations
+subtitle: Musings and ramblings through the world of python
+author: Jake Vanderplas
 simple_search: http://google.com/search
 description:
 
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: jakevdp
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -89,11 +89,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: pythonicperambulations
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-34061646-1
 
 # Facebook Like
 facebook_like: false
