--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: jakevdp
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
