--- a/_config.yml
+++ b/_config.yml
@@ -68,16 +68,16 @@ twitter_user: jakevdp
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
-twitter_show_follower_count: false
+twitter_show_follower_count: true
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: jakevdp
 googleplus_hidden: false
 
 # Pinboard
